--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -108,10 +108,11 @@
   padding: 1rem 0;
   position: absolute;
   // right: 0;
-  right: -2.5rem;
+  right: -1rem;
   z-index: 10;
   width: 40rem;
   background-color: #fff;
+  border-radius: 1rem;
   box-shadow: 0 0.8rem 5rem 2rem rgba($color-grey-dark-1, 0.1);
 
   visibility: hidden;
