--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -105,9 +105,8 @@
 }
 
 .bookmarks {
-  padding: 1rem 0;
+  // padding: 1rem 0;
   position: absolute;
-  // right: 0;
   right: -1rem;
   z-index: 10;
   width: 40rem;
@@ -115,7 +114,9 @@
   border-radius: 1rem;
   box-shadow: 0 0.8rem 5rem 2rem rgba($color-grey-dark-1, 0.1);
 
-  visibility: hidden;
+  // visibility: hidden;
+  height: 0;
+  overflow: hidden;
   opacity: 0;
   transition: all 0.5s 0.2s;
 
@@ -139,7 +140,8 @@
 
   &:hover,
   .nav__btn--bookmarks:hover + & {
-    visibility: visible;
+    // visibility: visible;
     opacity: 1;
+    height: auto;
   }
 }
